--- a/BatchPay/App.config
+++ b/BatchPay/App.config
@@ -7,7 +7,13 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
-  <connectionStrings><add name="TravComEntities" connectionString="metadata=res://*/Model.TravcomEntities.csdl|res://*/Model.TravcomEntities.ssdl|res://*/Model.TravcomEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.6;initial catalog=TravCom;user id=sa;password=password123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="BatchPayEntities" connectionString="metadata=res://*/Model.BatchpayEntities.csdl|res://*/Model.BatchpayEntities.ssdl|res://*/Model.BatchpayEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=BatchPay;user id=sa;password=secret;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <!--Server Database-->
+    <!--<add name="TravComEntities" connectionString="metadata=res://*/Model.TravcomEntities.csdl|res://*/Model.TravcomEntities.ssdl|res://*/Model.TravcomEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.6;initial catalog=TravCom;user id=sa;password=password123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="BatchPayEntities" connectionString="metadata=res://*/Model.BatchpayEntities.csdl|res://*/Model.BatchpayEntities.ssdl|res://*/Model.BatchpayEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=BatchPay;user id=sa;password=secret;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--Local Database-->
+    <add name="TravComEntities" connectionString="metadata=res://*/Model.TravcomEntities.csdl|res://*/Model.TravcomEntities.ssdl|res://*/Model.TravcomEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=TravCom;user id=sa;password=secret;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BatchPayEntities1" connectionString="metadata=res://*/Model.BatchPayEntities.csdl|res://*/Model.BatchPayEntities.ssdl|res://*/Model.BatchPayEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=BatchPay;user id=sa;password=secret;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
